# TeraRusty

./: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
core/: build.gradle  build.gradle.kts
core-rust/: build.gradle  build.gradle.kts  build.txt  buildold.txt
core-rust/natives/: Cargo.toml
core-rust/natives/src/: .lib.rs.rustfmt  context.rs  engine_kernel.rs  errors.rs  gui_subsystem.rs  gui_texture.wgsl  id_pool.rs  index_pool.rs  java_util.rs  jni_support.rs  lib.rs  renderer_window.rs  resources.rs  scene.rs  ui.rs  window_surface.rs  world.rs
core-rust/natives/src/jni/: jni_chunk_mesh.rs  jni_engine_kernel.rs  jni_resource.rs  jni_texture.rs  jni_ui.rs  mod.rs
core-rust/natives/src/math/: rect.rs
core-rust/natives/src/resource/: .texture_resource.rs.rustfmt  chunk_mesh_resource.rs  mesh_resource.rs  mod.rs  texture_resource.rs
core/natives/src/: lib.rs
core/src/main/java/org/terasology/engine/rust/: Disposable.java  EngineKernel.java  EngineSubsystem.java  GeometryHandle.java  GuiSubsystem.java  NativeSupport.java  NativeWindow.java  RawHandle.java  ResourceManager.java  Scene.java  TeraRusty.java  TeraTexture.java  UIRenderer.java  UserInterface.java
core/src/main/java/org/terasology/engine/rust/resource/: ChunkGeometry.java  (+3 more)
gradle/: common.gradle
lib/: build.gradle
rust/: build.gradle
rust-library/: Cargo.toml  build.gradle.kts
rust-library/src/: win_init.rs
rust/src/main/java/org/terasology/engine/rust/: TeraRusty.java
rusty/: build.gradle
rusty/src/main/java/org/terasology/engine/rust/: TeraRusty.java
