[package]
name = "core-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
raw-window-handle = "0.5.2"
image = { version = "0.23.12", features = ["jpeg"], default-features = false }
winit = "0.27"
wgpu = "0.16.2"
futures = "0.3"
once_cell = "1.18.0"
slotmap = "1.0.6"
glam = "0.24.1"
smallvec = "1.11.0"
bytemuck = {version = "1.13.1", features = ["derive"]}
